--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@ work.html~
 index.html~
 audio.html~
 css/#style.css#
+bio.html~
+contact_form.html~
+#contact_form.html~#
+visual.html~
+cv.html~
+#cv.html~#
 
 # Ignore Emacs temporary/lock files
 .#*
